// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferenceItem renders unlinked reference (no control_number) 1`] = `
<div
  className="ant-list-item"
>
  <Meta
    description={
      <AuthorList
        authors={
          Immutable.List [
            Immutable.Map {
              full_name: "Author",
            },
          ]
        }
        limit={5}
        recordId={undefined}
        showAll={false}
        total={-1}
        wrapperClassName={null}
      />
    }
    title="Title"
  />
</div>
`;

exports[`ReferenceItem renders with full reference 1`] = `
<div
  className="ant-list-item"
>
  <Meta
    description={
      <AuthorList
        authors={
          Immutable.List [
            Immutable.Map {
              full_name: "Author",
            },
          ]
        }
        limit={5}
        recordId={12345}
        showAll={false}
        total={-1}
        wrapperClassName={null}
      />
    }
    title={
      <Link
        replace={false}
        to="/literature/12345"
      >
        
         
        <Latex>
          Title
        </Latex>
      </Link>
    }
  />
</div>
`;
